// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`entity-list can mount "disabled all" entity list 1`] = `
<div id="app">
	<div class="SharpEntityList">
		<div class="SharpEntityList__table SharpEntityList__table--border">
			<div class="SharpEntityList__thead">
				<div class="SharpEntityList__row SharpEntityList__row--header container">
					<div class="SharpEntityList__cols">
						<div class="row">
							<div class="SharpEntityList__th col-12 col-md-6">
								<span>Titre</span>
								<!---->
								<!---->
							</div>
						</div>
					</div>
					<div class="d-none d-md-block" style="width: 0px;">&nbsp;</div>
				</div>
			</div>
			<div class="SharpEntityList__tbody">
				<div id="MOCKED_VUE_DRAGGALBE">
					<div class="SharpEntityList__row container SharpEntityList__row--disabled">
						<div class="SharpEntityList__cols">
							<div class="row">
								<div class="SharpEntityList__td col-12 col-md-6">
									Should be disabled
								</div>
							</div>
							<!---->
						</div>
						<div class="SharpEntityList__row-actions align-self-center">
							<div class="row justify-content-end no-gutters">
								<!---->
								<!---->
							</div>
						</div>
						<div class="SharpEntityList__row-actions" style="display: none;">
							<i class="fa fa-ellipsis-v SharpEntityList__reorder-icon"></i>
						</div>
					</div>
					<div class="SharpEntityList__row container SharpEntityList__row--disabled">
						<div class="SharpEntityList__cols">
							<div class="row">
								<div class="SharpEntityList__td col-12 col-md-6">
									Should be disabled
								</div>
							</div>
							<!---->
						</div>
						<div class="SharpEntityList__row-actions align-self-center">
							<div class="row justify-content-end no-gutters">
								<!---->
								<!---->
							</div>
						</div>
						<div class="SharpEntityList__row-actions" style="display: none;">
							<i class="fa fa-ellipsis-v SharpEntityList__reorder-icon"></i>
						</div>
					</div>
				</div>
			</div>
		</div>
		<div class="SharpEntityList__pagination-container">
			<!---->
		</div>
		__MOCKED_SFC_SharpViewPanel__
	</div>
</div>
`;

exports[`entity-list can mount "disabled one" entity list 1`] = `
<div id="app">
	<div class="SharpEntityList">
		<div class="SharpEntityList__table SharpEntityList__table--border">
			<div class="SharpEntityList__thead">
				<div class="SharpEntityList__row SharpEntityList__row--header container">
					<div class="SharpEntityList__cols">
						<div class="row">
							<div class="SharpEntityList__th col-12 col-md-6">
								<span>Titre</span>
								<!---->
								<!---->
							</div>
						</div>
					</div>
					<div class="d-none d-md-block" style="width: 0px;">&nbsp;</div>
				</div>
			</div>
			<div class="SharpEntityList__tbody">
				<div id="MOCKED_VUE_DRAGGALBE">
					<div class="SharpEntityList__row container">
						<div class="SharpEntityList__cols">
							<div class="row">
								<div class="SharpEntityList__td col-12 col-md-6">
									Super title
								</div>
							</div>
							<a href="/sharp/form/spaceship/1" class="SharpEntityList__row-link"></a>
						</div>
						<div class="SharpEntityList__row-actions align-self-center">
							<div class="row justify-content-end no-gutters">
								<!---->
								<!---->
							</div>
						</div>
						<div class="SharpEntityList__row-actions" style="display: none;">
							<i class="fa fa-ellipsis-v SharpEntityList__reorder-icon"></i>
						</div>
					</div>
					<div class="SharpEntityList__row container SharpEntityList__row--disabled">
						<div class="SharpEntityList__cols">
							<div class="row">
								<div class="SharpEntityList__td col-12 col-md-6">
									Should be disabled
								</div>
							</div>
							<!---->
						</div>
						<div class="SharpEntityList__row-actions align-self-center">
							<div class="row justify-content-end no-gutters">
								<!---->
								<!---->
							</div>
						</div>
						<div class="SharpEntityList__row-actions" style="display: none;">
							<i class="fa fa-ellipsis-v SharpEntityList__reorder-icon"></i>
						</div>
					</div>
				</div>
			</div>
		</div>
		<div class="SharpEntityList__pagination-container">
			<!---->
		</div>
		__MOCKED_SFC_SharpViewPanel__
	</div>
</div>
`;

exports[`entity-list can mount "empty" entity list 1`] = `
<div id="app">
	<div class="SharpEntityList">
		{{ entity_list.empty_text }}
		<div class="SharpEntityList__pagination-container">
			<!---->
		</div>
		__MOCKED_SFC_SharpViewPanel__
	</div>
</div>
`;

exports[`entity-list can mount "hide on XS" entity list 1`] = `
<div id="app">
	<div class="SharpEntityList">
		<div class="SharpEntityList__table SharpEntityList__table--border">
			<div class="SharpEntityList__thead">
				<div class="SharpEntityList__row SharpEntityList__row--header container">
					<div class="SharpEntityList__cols">
						<div class="row">
							<div class="SharpEntityList__th col-12 col-md-6">
								<span>Titre</span>
								<!---->
								<!---->
							</div>
						</div>
					</div>
					<div class="d-none d-md-block" style="width: 0px;">&nbsp;</div>
				</div>
			</div>
			<div class="SharpEntityList__tbody">
				<div id="MOCKED_VUE_DRAGGALBE">
					<div class="SharpEntityList__row container">
						<div class="SharpEntityList__cols">
							<div class="row">
								<div class="SharpEntityList__td col-12 col-md-6">
									Super title
								</div>
							</div>
							<a href="/sharp/form/spaceship/1" class="SharpEntityList__row-link"></a>
						</div>
						<div class="SharpEntityList__row-actions align-self-center">
							<div class="row justify-content-end no-gutters">
								<!---->
								<!---->
							</div>
						</div>
						<div class="SharpEntityList__row-actions" style="display: none;">
							<i class="fa fa-ellipsis-v SharpEntityList__reorder-icon"></i>
						</div>
					</div>
				</div>
			</div>
		</div>
		<div class="SharpEntityList__pagination-container">
			<!---->
		</div>
		__MOCKED_SFC_SharpViewPanel__
	</div>
</div>
`;

exports[`entity-list can mount "reordering reordered" entity list 1`] = `
<div id="app">
	<div class="SharpEntityList SharpEntityList--reorder">
		<div class="SharpEntityList__table SharpEntityList__table--border">
			<div class="SharpEntityList__thead">
				<div class="SharpEntityList__row SharpEntityList__row--header container">
					<div class="SharpEntityList__cols">
						<div class="row">
							<div class="SharpEntityList__th col-12 col-md-6">
								<span>Titre</span>
								<!---->
								<!---->
							</div>
						</div>
					</div>
					<div class="d-none d-md-block" style="width: 0px;">&nbsp;</div>
				</div>
			</div>
			<div class="SharpEntityList__tbody">
				<div id="MOCKED_VUE_DRAGGALBE">
					<div class="SharpEntityList__row container SharpEntityList__row--reorder">
						<div class="SharpEntityList__cols">
							<div class="row">
								<div class="SharpEntityList__td col-12 col-md-6">
									Second title
								</div>
							</div>
							<a href="/sharp/form/spaceship/1" class="SharpEntityList__row-link"></a>
						</div>
						<div class="SharpEntityList__row-actions align-self-center" style="display: none;">
							<div class="row justify-content-end no-gutters">
								<!---->
								<!---->
							</div>
						</div>
						<div class="SharpEntityList__row-actions" style="">
							<i class="fa fa-ellipsis-v SharpEntityList__reorder-icon"></i>
						</div>
					</div>
					<div class="SharpEntityList__row container SharpEntityList__row--reorder">
						<div class="SharpEntityList__cols">
							<div class="row">
								<div class="SharpEntityList__td col-12 col-md-6">
									First title
								</div>
							</div>
							<a href="/sharp/form/spaceship/1" class="SharpEntityList__row-link"></a>
						</div>
						<div class="SharpEntityList__row-actions align-self-center" style="display: none;">
							<div class="row justify-content-end no-gutters">
								<!---->
								<!---->
							</div>
						</div>
						<div class="SharpEntityList__row-actions" style="">
							<i class="fa fa-ellipsis-v SharpEntityList__reorder-icon"></i>
						</div>
					</div>
				</div>
			</div>
		</div>
		<div class="SharpEntityList__pagination-container">
			<!---->
		</div>
		__MOCKED_SFC_SharpViewPanel__
	</div>
</div>
`;

exports[`entity-list can mount "reordering" entity list 1`] = `
<div id="app">
	<div class="SharpEntityList SharpEntityList--reorder">
		<div class="SharpEntityList__table SharpEntityList__table--border">
			<div class="SharpEntityList__thead">
				<div class="SharpEntityList__row SharpEntityList__row--header container">
					<div class="SharpEntityList__cols">
						<div class="row">
							<div class="SharpEntityList__th col-12 col-md-6">
								<span>Titre</span>
								<!---->
								<!---->
							</div>
						</div>
					</div>
					<div class="d-none d-md-block" style="width: 0px;">&nbsp;</div>
				</div>
			</div>
			<div class="SharpEntityList__tbody">
				<div id="MOCKED_VUE_DRAGGALBE">
					<div class="SharpEntityList__row container SharpEntityList__row--reorder">
						<div class="SharpEntityList__cols">
							<div class="row">
								<div class="SharpEntityList__td col-12 col-md-6">
									First title
								</div>
							</div>
							<a href="/sharp/form/spaceship/1" class="SharpEntityList__row-link"></a>
						</div>
						<div class="SharpEntityList__row-actions align-self-center" style="display: none;">
							<div class="row justify-content-end no-gutters">
								<!---->
								<!---->
							</div>
						</div>
						<div class="SharpEntityList__row-actions" style="">
							<i class="fa fa-ellipsis-v SharpEntityList__reorder-icon"></i>
						</div>
					</div>
					<div class="SharpEntityList__row container SharpEntityList__row--reorder">
						<div class="SharpEntityList__cols">
							<div class="row">
								<div class="SharpEntityList__td col-12 col-md-6">
									Second title
								</div>
							</div>
							<a href="/sharp/form/spaceship/2" class="SharpEntityList__row-link"></a>
						</div>
						<div class="SharpEntityList__row-actions align-self-center" style="display: none;">
							<div class="row justify-content-end no-gutters">
								<!---->
								<!---->
							</div>
						</div>
						<div class="SharpEntityList__row-actions" style="">
							<i class="fa fa-ellipsis-v SharpEntityList__reorder-icon"></i>
						</div>
					</div>
				</div>
			</div>
		</div>
		<div class="SharpEntityList__pagination-container">
			<!---->
		</div>
		__MOCKED_SFC_SharpViewPanel__
	</div>
</div>
`;

exports[`entity-list can mount "sortable selected ascending" entity list 1`] = `
<div id="app">
	<div class="SharpEntityList">
		<div class="SharpEntityList__table SharpEntityList__table--border">
			<div class="SharpEntityList__thead">
				<div class="SharpEntityList__row SharpEntityList__row--header container">
					<div class="SharpEntityList__cols">
						<div class="row">
							<div class="SharpEntityList__th col-12 col-md-6">
								<span>Titre</span>
								<svg width="10" height="5" viewBox="0 0 10 5" fill-rule="evenodd" class="SharpEntityList__carret SharpEntityList__carret--selected SharpEntityList__carret--ascending">
									<path d="M10 0L5 5 0 0z"></path>
								</svg>
								<a href="" class="SharpEntityList__sort-link"></a>
							</div>
						</div>
					</div>
					<div class="d-none d-md-block" style="width: 0px;">&nbsp;</div>
				</div>
			</div>
			<div class="SharpEntityList__tbody">
				<div id="MOCKED_VUE_DRAGGALBE">
					<div class="SharpEntityList__row container">
						<div class="SharpEntityList__cols">
							<div class="row">
								<div class="SharpEntityList__td col-12 col-md-6">
									Super title
								</div>
							</div>
							<a href="/sharp/form/spaceship/1" class="SharpEntityList__row-link"></a>
						</div>
						<div class="SharpEntityList__row-actions align-self-center">
							<div class="row justify-content-end no-gutters">
								<!---->
								<!---->
							</div>
						</div>
						<div class="SharpEntityList__row-actions" style="display: none;">
							<i class="fa fa-ellipsis-v SharpEntityList__reorder-icon"></i>
						</div>
					</div>
				</div>
			</div>
		</div>
		<div class="SharpEntityList__pagination-container">
			<!---->
		</div>
		__MOCKED_SFC_SharpViewPanel__
	</div>
</div>
`;

exports[`entity-list can mount "sortable selected" entity list 1`] = `
<div id="app">
	<div class="SharpEntityList">
		<div class="SharpEntityList__table SharpEntityList__table--border">
			<div class="SharpEntityList__thead">
				<div class="SharpEntityList__row SharpEntityList__row--header container">
					<div class="SharpEntityList__cols">
						<div class="row">
							<div class="SharpEntityList__th col-12 col-md-6">
								<span>Titre</span>
								<svg width="10" height="5" viewBox="0 0 10 5" fill-rule="evenodd" class="SharpEntityList__carret SharpEntityList__carret--selected">
									<path d="M10 0L5 5 0 0z"></path>
								</svg>
								<a href="" class="SharpEntityList__sort-link"></a>
							</div>
						</div>
					</div>
					<div class="d-none d-md-block" style="width: 0px;">&nbsp;</div>
				</div>
			</div>
			<div class="SharpEntityList__tbody">
				<div id="MOCKED_VUE_DRAGGALBE">
					<div class="SharpEntityList__row container">
						<div class="SharpEntityList__cols">
							<div class="row">
								<div class="SharpEntityList__td col-12 col-md-6">
									Super title
								</div>
							</div>
							<a href="/sharp/form/spaceship/1" class="SharpEntityList__row-link"></a>
						</div>
						<div class="SharpEntityList__row-actions align-self-center">
							<div class="row justify-content-end no-gutters">
								<!---->
								<!---->
							</div>
						</div>
						<div class="SharpEntityList__row-actions" style="display: none;">
							<i class="fa fa-ellipsis-v SharpEntityList__reorder-icon"></i>
						</div>
					</div>
				</div>
			</div>
		</div>
		<div class="SharpEntityList__pagination-container">
			<!---->
		</div>
		__MOCKED_SFC_SharpViewPanel__
	</div>
</div>
`;

exports[`entity-list can mount "sortable" entity list 1`] = `
<div id="app">
	<div class="SharpEntityList">
		<div class="SharpEntityList__table SharpEntityList__table--border">
			<div class="SharpEntityList__thead">
				<div class="SharpEntityList__row SharpEntityList__row--header container">
					<div class="SharpEntityList__cols">
						<div class="row">
							<div class="SharpEntityList__th col-12 col-md-6">
								<span>Titre</span>
								<svg width="10" height="5" viewBox="0 0 10 5" fill-rule="evenodd" class="SharpEntityList__carret">
									<path d="M10 0L5 5 0 0z"></path>
								</svg>
								<a href="" class="SharpEntityList__sort-link"></a>
							</div>
						</div>
					</div>
					<div class="d-none d-md-block" style="width: 0px;">&nbsp;</div>
				</div>
			</div>
			<div class="SharpEntityList__tbody">
				<div id="MOCKED_VUE_DRAGGALBE">
					<div class="SharpEntityList__row container">
						<div class="SharpEntityList__cols">
							<div class="row">
								<div class="SharpEntityList__td col-12 col-md-6">
									Super title
								</div>
							</div>
							<a href="/sharp/form/spaceship/1" class="SharpEntityList__row-link"></a>
						</div>
						<div class="SharpEntityList__row-actions align-self-center">
							<div class="row justify-content-end no-gutters">
								<!---->
								<!---->
							</div>
						</div>
						<div class="SharpEntityList__row-actions" style="display: none;">
							<i class="fa fa-ellipsis-v SharpEntityList__reorder-icon"></i>
						</div>
					</div>
				</div>
			</div>
		</div>
		<div class="SharpEntityList__pagination-container">
			<!---->
		</div>
		__MOCKED_SFC_SharpViewPanel__
	</div>
</div>
`;

exports[`entity-list can mount "with commands" entity list 1`] = `
<div id="app">
	<div class="SharpEntityList">
		<div class="SharpEntityList__table SharpEntityList__table--border">
			<div class="SharpEntityList__thead">
				<div class="SharpEntityList__row SharpEntityList__row--header container">
					<div class="SharpEntityList__cols">
						<div class="row">
							<div class="SharpEntityList__th col-12 col-md-6">
								<span>Titre</span>
								<!---->
								<!---->
							</div>
						</div>
					</div>
					<div class="d-none d-md-block" style="width: 0px;">&nbsp;</div>
				</div>
			</div>
			<div class="SharpEntityList__tbody">
				<div id="MOCKED_VUE_DRAGGALBE">
					<div class="SharpEntityList__row container">
						<div class="SharpEntityList__cols">
							<div class="row">
								<div class="SharpEntityList__td col-12 col-md-6">
									First title
								</div>
							</div>
							<a href="/sharp/form/spaceship/1" class="SharpEntityList__row-link"></a>
						</div>
						<div class="SharpEntityList__row-actions align-self-center">
							<div class="row justify-content-end no-gutters">
								<!---->
								<div class="col-auto col-md-12 pl-2 pl-md-0 my-1">
									<div class="MOCKED_SHARP_DROPDOWN SharpCommandsDropdown SharpEntityList__commands-dropdown">
										<div class="SLOT:text">
											{{ entity_list.commands.instance.label }}
										</div>
										<div class="MOCKED_SHARP_DROPDOWN_ITEM">
											Should be visible in first title
											<!---->
										</div>
										<li class="SharpDropdown__separator"></li>
									</div>
								</div>
							</div>
						</div>
						<div class="SharpEntityList__row-actions" style="display: none;">
							<i class="fa fa-ellipsis-v SharpEntityList__reorder-icon"></i>
						</div>
					</div>
					<div class="SharpEntityList__row container">
						<div class="SharpEntityList__cols">
							<div class="row">
								<div class="SharpEntityList__td col-12 col-md-6">
									Second title
								</div>
							</div>
							<a href="/sharp/form/spaceship/2" class="SharpEntityList__row-link"></a>
						</div>
						<div class="SharpEntityList__row-actions align-self-center">
							<div class="row justify-content-end no-gutters">
								<!---->
								<div class="col-auto col-md-12 pl-2 pl-md-0 my-1">
									<div class="MOCKED_SHARP_DROPDOWN SharpCommandsDropdown SharpEntityList__commands-dropdown">
										<div class="SLOT:text">
											{{ entity_list.commands.instance.label }}
										</div>
										<div class="MOCKED_SHARP_DROPDOWN_ITEM">
											Should be visible in second title
											<!---->
										</div>
										<li class="SharpDropdown__separator"></li>
									</div>
								</div>
							</div>
						</div>
						<div class="SharpEntityList__row-actions" style="display: none;">
							<i class="fa fa-ellipsis-v SharpEntityList__reorder-icon"></i>
						</div>
					</div>
					<div class="SharpEntityList__row container">
						<div class="SharpEntityList__cols">
							<div class="row">
								<div class="SharpEntityList__td col-12 col-md-6">
									Third title
								</div>
							</div>
							<a href="/sharp/form/spaceship/3" class="SharpEntityList__row-link"></a>
						</div>
						<div class="SharpEntityList__row-actions align-self-center">
							<div class="row justify-content-end no-gutters">
								<!---->
								<!---->
							</div>
						</div>
						<div class="SharpEntityList__row-actions" style="display: none;">
							<i class="fa fa-ellipsis-v SharpEntityList__reorder-icon"></i>
						</div>
					</div>
				</div>
			</div>
		</div>
		<div class="SharpEntityList__pagination-container">
			<!---->
		</div>
		__MOCKED_SFC_SharpViewPanel__
	</div>
</div>
`;

exports[`entity-list can mount "with form commands" entity list 1`] = `
<!--document part-->
<div class="MOCKED_SHARP_MODAL">
	__MOCKED_SFC_SharpForm__
</div>
<!--end document part-->
<!--document part-->
<div class="MOCKED_SHARP_MODAL">
	<!---->
</div>
<!--end document part-->
`;

exports[`entity-list can mount "with html" entity list 1`] = `
<div id="app">
	<div class="SharpEntityList">
		<div class="SharpEntityList__table SharpEntityList__table--border">
			<div class="SharpEntityList__thead">
				<div class="SharpEntityList__row SharpEntityList__row--header container">
					<div class="SharpEntityList__cols">
						<div class="row">
							<div class="SharpEntityList__th col-12 col-md-6">
								<span>Titre</span>
								<!---->
								<!---->
							</div>
						</div>
					</div>
					<div class="d-none d-md-block" style="width: 0px;">&nbsp;</div>
				</div>
			</div>
			<div class="SharpEntityList__tbody">
				<div id="MOCKED_VUE_DRAGGALBE">
					<div class="SharpEntityList__row container">
						<div class="SharpEntityList__cols">
							<div class="row">
								<div class="SharpEntityList__td col-12 col-md-6">
									<div class="SharpEntityList__td-html-container">
										<span>HTML content</span>
									</div>
								</div>
							</div>
							<a href="/sharp/form/spaceship/1" class="SharpEntityList__row-link"></a>
						</div>
						<div class="SharpEntityList__row-actions align-self-center">
							<div class="row justify-content-end no-gutters">
								<!---->
								<!---->
							</div>
						</div>
						<div class="SharpEntityList__row-actions" style="display: none;">
							<i class="fa fa-ellipsis-v SharpEntityList__reorder-icon"></i>
						</div>
					</div>
				</div>
			</div>
		</div>
		<div class="SharpEntityList__pagination-container">
			<!---->
		</div>
		__MOCKED_SFC_SharpViewPanel__
	</div>
</div>
`;

exports[`entity-list can mount "with pagination" entity list 1`] = `
<div id="app">
	<div class="SharpEntityList">
		{{ entity_list.empty_text }}
		<div class="SharpEntityList__pagination-container">
			__MOCKED_SFC_SharpPagination__
		</div>
		__MOCKED_SFC_SharpViewPanel__
	</div>
</div>
`;

exports[`entity-list can mount "with state" entity list 1`] = `
<div id="app">
	<div class="SharpEntityList">
		<div class="SharpEntityList__table SharpEntityList__table--border">
			<div class="SharpEntityList__thead">
				<div class="SharpEntityList__row SharpEntityList__row--header container">
					<div class="SharpEntityList__cols">
						<div class="row">
							<div class="SharpEntityList__th col-12 col-md-6">
								<span>Titre</span>
								<!---->
								<!---->
							</div>
						</div>
					</div>
					<div class="d-none d-md-block" style="width: 0px;">&nbsp;</div>
				</div>
			</div>
			<div class="SharpEntityList__tbody">
				<div id="MOCKED_VUE_DRAGGALBE">
					<div class="SharpEntityList__row container">
						<div class="SharpEntityList__cols">
							<div class="row">
								<div class="SharpEntityList__td col-12 col-md-6">
									First title
								</div>
							</div>
							<a href="/sharp/form/spaceship/1" class="SharpEntityList__row-link"></a>
						</div>
						<div class="SharpEntityList__row-actions align-self-center">
							<div class="row justify-content-end no-gutters">
								<div class="col-auto col-md-12 my-1">
									<div class="MOCKED_SHARP_DROPDOWN SharpEntityList__state-dropdown">
										<div class="SLOT:text">
											<span class="MOCKED_STATE_ICON" style="background: green;"></span>
											<span class="text-truncate">
												Visible
											</span>
										</div>
										<div class="MOCKED_SHARP_DROPDOWN_ITEM">
											<span class="MOCKED_STATE_ICON" style="background: green;"></span>&nbsp; Visible
										</div>
										<div class="MOCKED_SHARP_DROPDOWN_ITEM">
											<span class="MOCKED_STATE_ICON sharp_grey"></span>&nbsp; Not visible
										</div>
									</div>
								</div>
								<!---->
							</div>
						</div>
						<div class="SharpEntityList__row-actions" style="display: none;">
							<i class="fa fa-ellipsis-v SharpEntityList__reorder-icon"></i>
						</div>
					</div>
					<div class="SharpEntityList__row container">
						<div class="SharpEntityList__cols">
							<div class="row">
								<div class="SharpEntityList__td col-12 col-md-6">
									Second title
								</div>
							</div>
							<a href="/sharp/form/spaceship/2" class="SharpEntityList__row-link"></a>
						</div>
						<div class="SharpEntityList__row-actions align-self-center">
							<div class="row justify-content-end no-gutters">
								<div class="col-auto col-md-12 my-1">
									<div class="MOCKED_SHARP_DROPDOWN SharpEntityList__state-dropdown [[ isDisabled ]]">
										<div class="SLOT:text">
											<span class="MOCKED_STATE_ICON sharp_grey"></span>
											<span class="text-truncate">
												Not visible
											</span>
										</div>
										<div class="MOCKED_SHARP_DROPDOWN_ITEM">
											<span class="MOCKED_STATE_ICON" style="background: green;"></span>&nbsp; Visible
										</div>
										<div class="MOCKED_SHARP_DROPDOWN_ITEM">
											<span class="MOCKED_STATE_ICON sharp_grey"></span>&nbsp; Not visible
										</div>
									</div>
								</div>
								<!---->
							</div>
						</div>
						<div class="SharpEntityList__row-actions" style="display: none;">
							<i class="fa fa-ellipsis-v SharpEntityList__reorder-icon"></i>
						</div>
					</div>
				</div>
			</div>
		</div>
		<div class="SharpEntityList__pagination-container">
			<!---->
		</div>
		__MOCKED_SFC_SharpViewPanel__
	</div>
</div>
`;

exports[`entity-list can mount entity list 1`] = `
<div id="app">
	<div class="SharpEntityList">
		<div class="SharpEntityList__table SharpEntityList__table--border">
			<div class="SharpEntityList__thead">
				<div class="SharpEntityList__row SharpEntityList__row--header container">
					<div class="SharpEntityList__cols">
						<div class="row">
							<div class="SharpEntityList__th col-12 col-md-6">
								<span>Titre</span>
								<!---->
								<!---->
							</div>
						</div>
					</div>
					<div class="d-none d-md-block" style="width: 0px;">&nbsp;</div>
				</div>
			</div>
			<div class="SharpEntityList__tbody">
				<div id="MOCKED_VUE_DRAGGALBE">
					<div class="SharpEntityList__row container">
						<div class="SharpEntityList__cols">
							<div class="row">
								<div class="SharpEntityList__td col-12 col-md-6">
									Super title
								</div>
							</div>
							<a href="/sharp/form/spaceship/1" class="SharpEntityList__row-link"></a>
						</div>
						<div class="SharpEntityList__row-actions align-self-center">
							<div class="row justify-content-end no-gutters">
								<!---->
								<!---->
							</div>
						</div>
						<div class="SharpEntityList__row-actions" style="display: none;">
							<i class="fa fa-ellipsis-v SharpEntityList__reorder-icon"></i>
						</div>
					</div>
				</div>
			</div>
		</div>
		<div class="SharpEntityList__pagination-container">
			<!---->
		</div>
		__MOCKED_SFC_SharpViewPanel__
	</div>
</div>
`;
